[gd_scene load_steps=4 format=3 uid="uid://ctcrnvrb1woyl"]

[ext_resource type="Script" path="res://scripts/segment_display.gd" id="1_8jccf"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d2tlw"]
albedo_color = Color(0.6, 0, 0, 1)
roughness = 0.0
emission_enabled = true
emission = Color(1, 0, 0, 1)
emission_energy_multiplier = 0.5

[sub_resource type="QuadMesh" id="QuadMesh_w850l"]
material = SubResource("StandardMaterial3D_d2tlw")
size = Vector2(1, 0.2)

[node name="SegmentDisplay" type="Node3D"]
script = ExtResource("1_8jccf")

[node name="Top" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("QuadMesh_w850l")
skeleton = NodePath("../..")

[node name="Mid" type="MeshInstance3D" parent="."]
mesh = SubResource("QuadMesh_w850l")
skeleton = NodePath("../..")

[node name="Bottom" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh = SubResource("QuadMesh_w850l")
skeleton = NodePath("../..")

[node name="TopRight" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.5, 0.5, 0)
mesh = SubResource("QuadMesh_w850l")
skeleton = NodePath("../..")

[node name="BottomRight" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.5, -0.5, 0)
mesh = SubResource("QuadMesh_w850l")
skeleton = NodePath("../..")

[node name="TopLeft" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.5, 0.5, 0)
mesh = SubResource("QuadMesh_w850l")
skeleton = NodePath("../..")

[node name="BottomLeft" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.5, -0.5, 0)
mesh = SubResource("QuadMesh_w850l")
skeleton = NodePath("../..")
